Friendship ended with Tourister; Now my best friend is Tourisit
Co-Authored-By: Alex C <59523055+Alexc09@users.noreply.github.com>
Co-Authored-By: CoolMysticIon <56503601+CoolMysticIon@users.noreply.github.com>
Co-Authored-By: Chloe Low <72703739+chloryfish@users.noreply.github.com>

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -10,7 +10,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                Tourister ID
+                Tourisit ID
             </h1>
             <h2 class="subtitle is-size-4">
                 Your pass to local tours, by locals.
@@ -24,7 +24,7 @@
 <section class="section">
     <div class="container" id="main">
         <div id="login">
-            <h1 class="title">Login to your Tourister ID</h1>
+            <h1 class="title">Login to your Tourisit ID</h1>
             <h3 class="subtitle">Welcome back! Ready to ride some tour guides?</h3>
             <div id="emailConfirmed" class="notification is-success" style="display: none;">
                 Your email has been verified.
