--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -9,7 +9,7 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title has-text-weight-bold" style="font-size: 3rem;">
-                Tourister ID
+                Tourisit ID
             </h1>
             <h2 class="subtitle is-size-4">
                 Your pass to local tours, by locals.
@@ -21,7 +21,7 @@
 <section class="section">
     <div class="container" id="main">
         <div id="register">
-            <h1 class="title">Get a Tourister ID</h1>
+            <h1 class="title">Get a Tourisit ID</h1>
             <h3 class="subtitle">Welcome!</h3>
             <div id="emailNotValid" class="notification is-danger" style="display: none;">
                 Email address doesn't seem to be valid.
