--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -5,7 +5,7 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourister - Tours by locals.</title>
+    <title>Tourisit - Tours by locals.</title>
     <link rel="stylesheet" href="/css/bulma.min.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -33,7 +33,7 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="{{url_for('adminDashboard')}}">Tourister&nbsp;<span
+                <a class="navbar-item has-text-weight-bold" href="{{url_for('adminDashboard')}}">Tourisit&nbsp;<span
                         class="has-text-danger has-text-weight-normal">Admin</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
