--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %}Tourister - Tours By Locals {% endblock %}
+{% block title %}Tourisit - Tours By Locals {% endblock %}
 
 
 {% block scripts %}
