--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourister - Tours by locals.</title>
+    <title>Tourisit - Tours by locals.</title>
     <link rel="stylesheet" href="/css/bulma.min.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet"
@@ -35,7 +35,7 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="/">Tourister</a>
+                <a class="navbar-item has-text-weight-bold" href="/">Tourisit</a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
