--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -5,7 +5,7 @@
     {% block head %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tourister - Tours by locals.</title>
+    <title>Tourisit - Tours by locals.</title>
     <link rel="stylesheet" href="/css/bulma.min.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet"
@@ -35,7 +35,7 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="./dashboard">Tourister&nbsp;<span
+                <a class="navbar-item has-text-weight-bold" href="./dashboard">Tourisit&nbsp;<span
                         class="has-text-weight-normal has-text-primary">for Tour Guides</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
