--- a/templates/customer/index-customer.html
+++ b/templates/customer/index-customer.html
@@ -11,7 +11,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <h1 class="title has-text-weight-bold" style="font-size: 5rem;">
-          Tourister
+          Tourisit
         </h1>
         <h2 class="subtitle is-size-3">
           Tours by Locals, for Locals
