--- a/templates/internal/dashboard.html
+++ b/templates/internal/dashboard.html
@@ -17,7 +17,7 @@
                 Administration Control Panel
             </h1>
             <h2 class="subtitle">
-                Manage Tourister
+                Manage Tourisit
             </h2>
         </div>
     </div>
