--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -1,6 +1,6 @@
 {% extends 'baseTour.html' %}
 
-{% block title %}Tourister - Tours By Locals {% endblock %}
+{% block title %}Tourisit - Tours By Locals {% endblock %}
 
 {% block scripts %}
 <link rel="stylesheet" href="/css/shop.css">
