Rephrase & formatting stuff for booking & business

--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -63,7 +63,7 @@
                     Terminate Job
                   </a>
                   <a href="{{url_for('support')}}" class="dropdown-item">
-                    Report Dispute
+                    Report Abuse
                   </a>
                 </div>
               </div>
@@ -98,7 +98,7 @@
                     <i class="fas fa-route"></i>
                   </span>
                   <div class="steps-content">
-                    <p class="is-size-5">Itinerary Confirmed</p>
+                    <p class="is-size-5">Itinerary Approved</p>
                   </div>
                 </li>
 
