--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -49,7 +49,7 @@
             <!--<span class='is-pulled-right is-size-5'><i class="fas fa-ellipsis-h"></i></span>-->
 
             <!--START: More options dropdown-->
-            <div class="dropdown post-options is-hoverable is-pulled-right">
+            <div class="dropdown post-options is-hoverable is-right is-pulled-right">
               <div class="dropdown-trigger">
                 <button class="button" aria-haspopup="true" aria-controls="dropdown-menu-post">
                   <span class="icon is-small">
@@ -66,7 +66,7 @@
                     Request Booking Cancellation
                   </a>
                   <a href="{{url_for('support')}}" class="dropdown-item">
-                    Report Tour Guide
+                    Report Abuse
                   </a>
                 </div>
               </div>
@@ -92,7 +92,7 @@
                     <i class="fas fa-route"></i>
                   </span>
                   <div class="steps-content">
-                    <p class="is-size-5">Finalise Itinerary</p>
+                    <p class="is-size-5">Approve Itinerary</p>
                   </div>
                 </li>
 
@@ -108,10 +108,10 @@
                 <li class="steps-segment">
                   <a href="{{url_for('review')}}"><span class="steps-marker">
                     <i class="fas fa-comments"></i>
-                  </span></a>
+                  </span>
                   <div class="steps-content">
-                    <p class="is-size-5">Leave Feedback</p>
-                  </div>
+                    <p class="is-size-5 has-text-black">Leave Feedback</p>
+                  </div></a>
                 </li>
 
               </ul>
