Edit href for bookings icon on navbar, base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
                     <a class="navbar-item has-text-primary-dark" href="{{url_for('sellerDashboard')}}">
                         <i class="fas fa-arrow-right"></i>&ensp;Tour Guide mode
                     </a>
-                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Bookings" href="{{url_for('chat')}}">
+                    <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Bookings" href="{{url_for('all_bookings')}}">
                         <i class="fas fa-bookmark"></i>
                     </a>
                     <a class="navbar-item has-tooltip-arrow has-tooltip-bottom" data-tooltip="Your Wishlist" href="{{url_for('favourites')}}">
