Load dashboard.js only after DOM

--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -133,5 +133,5 @@
         </div>
     </div>
 </section>
-<script src="/js/dashboard.js"></script>
+<script defer src="/js/dashboard.js"></script>
 {% endblock %}
