Format chart and rename

--- a/templates/tourGuides/dashboard.html
+++ b/templates/tourGuides/dashboard.html
@@ -113,20 +113,20 @@
             <div class="column is-6">
                 <div class="panel">
                     <p class="panel-heading">
-                        Expenses
+                        Earnings Breakdown
                     </p>
                     <div class="panel-block">
-                        <canvas id="expensesChart" width="400" height="150"></canvas>
+                        <canvas id="incomeChart" width="400" height="200"></canvas>
                     </div>
                 </div>
             </div>
             <div class="column is-6">
                 <div class="panel">
                     <p class="panel-heading">
-                        Refunds
+                        Satisfaction Rate
                     </p>
                     <div class="panel-block">
-                        <canvas id="refundChart" width="400" height="150"></canvas>
+                        <canvas id="csatChart" width="400" height="200"></canvas>
                     </div>
                 </div>
             </div>
