--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -47,7 +47,7 @@
 
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="{{url_for('sellerDashboard')}}">
+                    <a class="navbar-item" href="/s/dashboard"> <!-- {{url_for('sellerDashboard')}} -->
                         Workdesk
                     </a>
                     <a class="navbar-item" href="{{url_for('support')}}">
@@ -98,6 +98,8 @@
             </div>
         </div>
     </nav>
+
+    <script src="https://cdn.jsdelivr.net/npm/patternomaly@1.3.2/dist/patternomaly.min.js"></script>
 
     {% endblock %}
 
