--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -35,7 +35,7 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="./dashboard">Tourisit&nbsp;<span
+                <a class="navbar-item has-text-weight-bold" href="{{url_for('sellerDashboard')}}">Tourisit&nbsp;<span
                         class="has-text-weight-normal has-text-primary">for Tour Guides</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
@@ -47,7 +47,7 @@
 
             <div class="navbar-menu">
                 <div class="navbar-start">
-                    <a class="navbar-item" href="/s/dashboard"> <!-- {{url_for('sellerDashboard')}} -->
+                    <a class="navbar-item" href="{{url_for('sellerDashboard')}}">
                         Workdesk
                     </a>
                     <a class="navbar-item" href="{{url_for('support')}}">
