--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="/">Tourisit</a>
+                <a class="navbar-item has-text-weight-bold" href="/"><img src="/logo.png"></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
