--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -35,8 +35,8 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="{{url_for('sellerDashboard')}}">Tourisit&nbsp;<span
-                        class="has-text-weight-normal has-text-primary">for Tour Guides</span></a>
+                <a class="navbar-item has-text-weight-bold" href="{{url_for('sellerDashboard')}}"><img src="/logo.png">&emsp;<span
+                        class="has-text-weight-bold has-text-primary">for Tour Guides</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
