--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -33,8 +33,8 @@
     <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a class="navbar-item has-text-weight-bold" href="{{url_for('adminDashboard')}}">Tourisit&nbsp;<span
-                        class="has-text-danger has-text-weight-normal">Admin</span></a>
+                <a class="navbar-item has-text-weight-bold" href="{{url_for('adminDashboard')}}"><img src="/logo.png">&emsp;<span
+                        class="has-text-danger has-text-weight-bold">Admin</span></a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false">
                     <span aria-hidden="true"></span>
