--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -124,6 +124,8 @@
     <div class='container mt-5'>
         <div class='box p-5'>
             <h2 class='is-size-3'><b>Itinerary</b></h2>
+            <a href="#" class="button is-success is-light is-size-6">
+              <i class="fas fa-check"></i>&ensp;Approved</a>
             <div class="columns pt-5">
 
                 <!--timeline-->
