chat.html but paperclip has friends now

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -82,10 +82,10 @@
                     <div class="dropdown-menu" id="dropdown-menu-post" role="menu">
                       <div class="dropdown-content">
                         <a class="dropdown-item">
-                          Photos & Videos
+                          <i class="fas fa-photo-video"></i>&ensp;Photos & Videos
                         </a>
                         <a class="dropdown-item">
-                          Documents
+                          <i class="fas fa-file"></i>&ensp;Documents
                         </a>
                       </div>
                     </div>
