--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -70,7 +70,7 @@
                     <div class="media-content">
                         <div class="content">
                             <p>
-                                <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                                <strong>Gordon Lansay</strong>
                                 <br>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
                             </p>
