--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -47,12 +47,12 @@
                     <div class='column'>
                         <br>
                         <div class="buttons is-centered">
-                            <a class="button is-white" style="color:rgb(226, 48, 78)"><i class="fas fa-heart"></i>&ensp;Add
+                            <a class="button is-white" style="color:rgb(226, 48, 78)" href={{ url_for('favourites') }}><i class="fas fa-heart"></i>&ensp;Add
                                 to wishlist</a>
                         </div>
                         <br>
                         <div class="buttons is-centered">
-                            <a class="button is-white has-text-primary"><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
+                            <a class="button is-white has-text-primary" href={{ url_for('all_bookings') }}><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
                         </div>
                     </div>
                 </div>
