--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -34,27 +34,36 @@
 
                     <form>
                         <fieldset>
+                            <div class="field is-grouped is-grouped-centered">
+                                <div class="control is-rtl">
+                                    <span class="fas fa-star fa-3x"></span>
+                                    <span class="fas fa-star fa-3x"></span>
+                                    <span class="fas fa-star fa-3x"></span>
+                                    <span class="fas fa-star fa-3x"></span>
+                                    <span class="fas fa-star fa-3x"></span>
+                                </div>
+                            </div>
                             <div class="field is-grouped is-grouped-centered is-rtl">
-                                <div class="score control">
+                                <div class="control">
                                     <label class="radio" for="star5">
-                                        <input type="radio" name="star" id="star5" value="5" class="is-invisible is-warning">
-                                        <i class="fas fa-star fa-3x has-text-grey-light"></i>
+                                        <input type="radio" name="star" id="star5" value="5" class="is-invisible">
+                                        <span class="fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="radio" for="star4">
-                                        <input type="radio" name="star" id="star4" value="4" class="is-invisible is-warning">
-                                        <i class="fas fa-star fa-3x has-text-grey-light"></i>
+                                    <label class="rating radio" for="star4">
+                                        <input type="radio" name="star" id="star4" value="4" class="is-invisible">
+                                        <span class="fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="radio" for="star3">
-                                        <input type="radio" name="star" id="star3" value="3" class="is-invisible is-warning">
-                                        <i class="fas fa-star fa-3x has-text-grey-light"></i>
+                                    <label class="rating radio" for="star3">
+                                        <input type="radio" name="star" id="star3" value="3" class="is-invisible">
+                                        <span class="fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="radio" for="star2">
-                                        <input type="radio" name="star" id="star2" value="2" class="is-invisible is-warning">
-                                        <i class="fas fa-star fa-3x has-text-grey-light"></i>
+                                    <label class="rating radio" for="star2">
+                                        <input type="radio" name="star" id="star2" value="2" class="is-invisible">
+                                        <span class="fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="radio" for="star1">
-                                        <input type="radio" name="star" id="star1" value="1" class="is-invisible is-warning">
-                                        <i class="fas fa-star fa-3x has-text-grey-light"></i>
+                                    <label class="rating radio" for="star1">
+                                        <input type="radio" name="star" id="star1" value="1" class="is-invisible">
+                                        <span class="fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
                                 </div>
                             </div>
