--- a/templates/tourGuides/allBusinesses.html
+++ b/templates/tourGuides/allBusinesses.html
@@ -5,11 +5,12 @@
 
 {% block scripts %}
 <link rel="stylesheet" href="/css/shop.css">
+<link rel="stylesheet" href="/css/all_bookings.css">
 {% endblock %}
 
 
 {% block content %}
-<section class='hero is-medium is-info is-bold'>
+<section class='hero is-medium is-black' id='bookings-hero'>
     <div class='hero-body'>
         <div class="container">
             <h1 class="title is-size-1 has-text-weight-bold">
@@ -26,7 +27,7 @@
             <div class="select">
                 <select>
                     <option>All Jobs</option>
-                    <option>Upcoming Jobs</option>
+                    <option>Current Jobs</option>
                     <option>Uninitiated</option>
                     <option>Archived</option>
                 </select>
