--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -40,19 +40,19 @@
                                         <input type="radio" name="star" id="star5" value="5" class="is-invisible">
                                         <span class="star fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="rating radio" for="star4">
+                                    <label class="radio" for="star4">
                                         <input type="radio" name="star" id="star4" value="4" class="is-invisible">
                                         <span class="star fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="rating radio" for="star3">
+                                    <label class="radio" for="star3">
                                         <input type="radio" name="star" id="star3" value="3" class="is-invisible">
                                         <span class="star fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="rating radio" for="star2">
+                                    <label class="radio" for="star2">
                                         <input type="radio" name="star" id="star2" value="2" class="is-invisible">
                                         <span class="star fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
-                                    <label class="rating radio" for="star1">
+                                    <label class="radio" for="star1">
                                         <input type="radio" name="star" id="star1" value="1" class="is-invisible">
                                         <span class="star fas fa-star fa-3x has-text-grey-light"></span>
                                     </label>
