--- a/templates/tourGuides/listing-success.html
+++ b/templates/tourGuides/listing-success.html
@@ -6,23 +6,15 @@
 
 
 {% block content %}
-<div class='hero'>
-    <div class='hero-body'>
-        <div class='columns is-centered'>
-            <div class='column is-half'>
-                <div class="card">
-                    <br><br><br><br><br><br><br><br>  
-                    <div class='content has-text-centered'>
-                        <h1>Listing was Successful!</h1>
-                        <br>
-                        <a class='button is-center is-rounded is-info is-outlined' href="{{url_for('ownlisting')}}">
-                            View Listings
-                        </a>   
-                    </div>
-                                
-                </div>
-            </div>
+<section class="section">
+    <div class="container">
+        <div class='content has-text-centered'>
+            <h1>Listing was Successful!</h1>
+            <br>
+            <a class='button is-light' href="{{url_for('ownlisting')}}">
+                View Listings
+            </a>   
         </div>
     </div>
-</div>
+</section>
 {% endblock %}
