--- a/templates/tourGuides/listing-success.html
+++ b/templates/tourGuides/listing-success.html
@@ -6,7 +6,7 @@
 
 
 {% block content %}
-<section class="section">
+<section class="section mt-5">
     <div class="container">
         <div class='content has-text-centered'>
             <h1>Listing was Successful!</h1>
