tourListing.html Book now button, href change ooga booga

--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -52,7 +52,7 @@
                         </div>
                         <br>
                         <div class="buttons is-centered">
-                            <a class="button is-white has-text-primary" href={{ url_for('all_bookings') }}><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
+                            <a class="button is-white has-text-primary" href={{ url_for('chat') }}><i class="fas fa-arrow-right"></i>&ensp;Book now</a>
                         </div>
                     </div>
                 </div>
