DON'T TOUCH MY STUFF. GO AWAY.

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
                         <div class="navbar-dropdown is-boxed is-right">
                             <div class="has-background-light p-4 mb-2 has-text-black">
                                 <p class="has-text-weight-bold">Logged in as</p>
-                                <p>HidethePain69</p>
+                                <p>HidethePain</p>
                             </div>
                             <a class="navbar-item" href="{{url_for('profile')}}">
                                 Your profile
