--- a/templates/chat.html
+++ b/templates/chat.html
@@ -16,7 +16,7 @@
         <br>
     <div class="listing-author mt-2">
         <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-        <div class="ml-2 is-size-3"><b>HideThePain69</b></div>
+        <div class="ml-2 is-size-3"><b>HidethePain</b></div>
     </div>
 </div>
 </section>
