--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -47,7 +47,7 @@
                         <span class="tag has-text-gray-light mb-4">Unintiated</span>
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title'>Bishan Nightlife</h1>
                         <p class="subtitle">Explore the night life of Bishan</p>
@@ -72,7 +72,7 @@
                         <span class="tag is-info is-light mb-4">Ordered</span>
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title'>Bishan Nightlife</h1>
                         <p class="subtitle">Explore the night life of Bishan</p>
@@ -97,7 +97,7 @@
                         <span class="tag is-success is-light mb-4">Paid</span>
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title'>Bishan Nightlife</h1>
                         <p class="subtitle">Explore the night life of Bishan</p>
@@ -122,7 +122,7 @@
                         <span class="tag is-warning is-light mb-4">Completed</span>
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title'>Bishan Nightlife</h1>
                         <p class="subtitle">Explore the night life of Bishan</p>
