--- a/templates/customer/review.html
+++ b/templates/customer/review.html
@@ -20,7 +20,7 @@
                             <div class="ml-4">
                                 <div class="mb-2 listing-author">
                                     <div class="profile-img" style="background-image: url('/public/pfp.jpg');"></div>
-                                    <div class="ml-2"><b>HideThePain69</b></div>
+                                    <div class="ml-2"><b>HidethePain</b></div>
                                 </div>
                                 <h1 class='title'>Bishan Nightlife</h1>
                                 <p class="subtitle">Explore the night life of Bishan</p>
