--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -17,7 +17,7 @@
                             <div class="mb-2 listing-author">
                                 <br><br>
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
                             </div>
                             <h1 class='title'>{{ item.tour_name }}</h1>
                             <p class="subtitle">{{ item.tour_brief }}</p>
