--- a/templates/internal/listings.html
+++ b/templates/internal/listings.html
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <td>Bishan Nightlife</td>
-                <td>HideThePain69</td>
+                <td>HidethePain</td>
                 <td>5 days ago</td>
                 <td>1 day ago</td>
             </tr>
