--- a/templates/internal/users.html
+++ b/templates/internal/users.html
@@ -33,7 +33,7 @@
                 <th>&nbsp;</th>
             </tr>
             <tr>
-                <td>HideThePain69</td>
+                <td>HidethePain</td>
                 <td><i class="fas fa-check"></i></td>
                 <td>1 year ago</td>
                 <td>Just now</td>
