--- a/templates/tourGuides/ownlisting.html
+++ b/templates/tourGuides/ownlisting.html
@@ -13,7 +13,7 @@
               Tours
             </h1>
             <h2 class="subtitle">
-              By HideThePain69
+              By HidethePain
             </h2>
           </div>
     </div>
@@ -31,7 +31,7 @@
                         <div class="ml-4">
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
                             </div>
                             <h1 class='title'>{{ item.tour_name }}</h1>
                             <p class="subtitle">{{ item.tour_brief }}</p>
