--- a/templates/tourGuides/tourListing.html
+++ b/templates/tourGuides/tourListing.html
@@ -18,7 +18,7 @@
                             <div class="mb-2 listing-author">
                                 <br><br>
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
                             </div>
                             <h1 class='title'>Bishan Nightlife</h1>
                             <p class="subtitle">Explore the night life of Bishan</p>
@@ -41,7 +41,7 @@
                 <div class='column is-half content'>
                     <h2>About this Tour</h2>
                     <p>
-                        <b>HideThePain69</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+                        <b>HidethePain</b> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                         when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap 
                         into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum 
                         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
