--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -70,7 +70,7 @@
                         <div class="navbar-dropdown is-boxed is-right">
                             <div class="has-background-light p-4 mb-2 has-text-black">
                                 <p class="has-text-weight-bold">Logged in as</p>
-                                <p>HidethePain69</p>
+                                <p>HidethePain</p>
                             </div>
                             <hr class="navbar-divider">
                             <a class="navbar-item has-text-danger-dark">
