--- a/templates/customer/favourites.html
+++ b/templates/customer/favourites.html
@@ -32,7 +32,7 @@
                     <div class="ml-4">
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title is-4'>Bishan Nightlife</h1>
                         <p class="subtitle is-6">Explore the night life of Bishan</p>
@@ -56,7 +56,7 @@
                     <div class="ml-4">
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title is-4'>Bishan Nightlife</h1>
                         <p class="subtitle is-6">Explore the night life of Bishan</p>
@@ -80,7 +80,7 @@
                     <div class="ml-4">
                         <div class="mb-2 listing-author">
                             <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                            <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
                         </div>
                         <h1 class='title is-4'>Bishan Nightlife</h1>
                         <p class="subtitle is-6">Explore the night life of Bishan</p>
