--- a/templates/customer/marketplace.html
+++ b/templates/customer/marketplace.html
@@ -90,7 +90,7 @@
                         <div class="ml-4">
                             <div class="mb-2 listing-author">
                                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                <div class="ml-2"><b>HideThePain69</b> is offering:</div>
+                                <div class="ml-2"><b>HidethePain</b> is offering:</div>
                             </div>
                             <h1 class='title is-4'>{{ item.tour_name }}</h1>
                             <p class="subtitle is-6">{{ item.tour_brief }}</p>
