--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -22,7 +22,7 @@
             <h1 class="title is-size-1 m-0">Bishan Nightlife</h1>
             <div class="listing-author">
                 <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                <div class="ml-2">By <b>HideThePain69</b></div>
+                <div class="ml-2">By <b>HidethePain</b></div>
             </div>
 
             <div class='columns my-5 is-vcentered'>
